fixed some alignment issues and made it mobile responsive. updated read me accordingly.

--- a/calculator.css
+++ b/calculator.css
@@ -1,23 +1,26 @@
+@media only screen and (max-width: 320px) {
+    #calc, #buttonlayout {margin-left: 15%;}
+}
+
 body{
     background-image: url("footer_lodyas.png");
     font-family: 'Yrsa', serif;
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
 
 .container-fluid {
     height: auto;
-    left:30%;
 
 }
 
-
 #calc {
-    display: inline-block;
-    padding: 1.5em 1.5em;
-    margin: 8em 4.5em;
-    background-color: #337ab7;
+    display: flex;
+    justify-content: center;
+    /*padding: 2%;*/
+    margin:5%;
+    /*background-color: #337ab7;*/
     border-radius: 2%;
-    box-shadow: 10px 10px 10px grey;
+    /*box-shadow: 10px 10px 10px grey;*/
 
 }
 
@@ -30,18 +33,18 @@ button {
 }
 
 #display {
-    padding: 5% 1%;
-    margin-bottom: 1em;
+    /*padding:0;*/
     display: flex;
     justify-content: center;
     /*margin-left: 60px;*/
     font-size: 3em;
     background-color: greenyellow;
-    width: 100%;
+    width: 370px;
 
 }
 
 #buttonlayout {
-    padding: 5%;
+    display: block;
+    justify-content: center;
 
 }
